feat(elk-stack-setup): add logging.file.name ci env

--- a/src/main/environment/ecd_ci.properties
+++ b/src/main/environment/ecd_ci.properties
@@ -15,3 +15,6 @@ registerBeneficiaryUrl=@env.COMMON_API_BASE_URL@/beneficiary/create
 
 ##Beneficiary Edit Url
 beneficiaryEditUrl =@env.COMMON_API_BASE_URL@/beneficiary/update
+
+#ELK logging file name
+logging.file.name=@env.ECD_API_LOGGING_FILE_NAME@
